# agents-roleplay

./: .gitignore  FLOW_SIMULATION.md  Francesca_profile.md  GEMINI.md  Giorgia_profile.md  Luigi_profile.md  Makefile  Marco_profile.md  README.md  config.py  extraction_and_create_kb.ipynb  graph.py  main.py  pyproject.toml  state.py
.chroma_db/: chroma.sqlite3
agents/: base_agent.py  employee_agent.py  hr_agent.py  utils.py
data/: genz.json  millenials.json
documents/: agent_graph.mmd  sequence_diagram.mmd
employee/: Giorgia.json  Luca.json  Marco.json
prompts/: employee_builder_prompt.py  francesca_prompt.py  hr_agent_prompt.py  kb_prompt.py  luigi_prompt.py
scripts/: build_employee.py  create_kb_chroma.py
tests/: test_vector_db.py
tools/: profile_tool.py  rag_tool.py  schemas.py
utils/: custom_model.py  llm_client.py  logger.py  metrics.py  opik_setup.py
vector_db/: client.py
