[project]
name = "genzelo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.18.0",
    "pandas>=3.0.0",
    "questionary>=2.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
]
