[project]
name = "genzelo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "dotenv>=0.9.9",
    "langgraph>=1.0.9",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "opik>=1.10.18",
    "questionary>=2.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "langsmith==0.5.2"
]

[dependency-groups]
dev = [
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8"
]
